--- a/css/common.css
+++ b/css/common.css
@@ -1,26 +1,30 @@
 body {
     background-image: radial-gradient( circle 939px at 94.7% 50%,  rgba(0,178,169,1) 0%, rgba(0,106,101,1) 76.9% );
 }
+
 #menu {
 	color: #FFF;
 	height: 50px;
 	padding-left: 18px;
-    /* position: fixed; */
     width: 100%;
 }
+
 #menu ul, #menu li {
 	margin: 0 auto;
 	padding: 0;
-	list-style: none
+	list-style: none;
 }
+
 #menu ul {
 	width: 100%;
 }
+
 #menu li {
 	float: left;
 	display: inline;
 	position: relative;
 }
+
 #menu a {
 	display: block;
 	line-height: 45px;
@@ -29,14 +33,16 @@ body {
 	color: #FFFFFF;
 	font-size: 16px;
 }
+
 #menu a.dropdown-arrow:after {
 	content: "\25BE";
 	margin-left: 5px;
 }
+
 #menu li a:hover {
 	color: #c7c7c7;
-	/* background: #80a982; */
 }
+
 #menu input {
 	display: none;
 	margin: 0;
@@ -44,20 +50,23 @@ body {
 	height: 45px;
 	width: 100%;
 	opacity: 0;
-	cursor: pointer
+	cursor: pointer;
 }
+
 #menu label {
 	display: none;
 	line-height: 45px;
 	text-align: center;
 	position: absolute;
-	left: 35px
+	left: 35px;
 }
+
 #menu label:before {
 	font-size: 1.6em;
 	content: "\2261"; 
 	margin-left: 20px;
 }
+
 #menu ul.sub-menus{
 	height: auto;
 	overflow: hidden;
@@ -68,17 +77,21 @@ body {
 	display: none;
     border-radius: 10px;
 }
+
 #menu ul.sub-menus li {
 	display: block;
 	width: 100%;
 }
+
 #menu ul.sub-menus a {
 	color: #FFFFFF;
 	font-size: 16px;
 }
+
 #menu li:hover ul.sub-menus {
-	display: block
+	display: block;
 }
+
 #menu ul.sub-menus a:hover{
 	background: #F2F2F2;
 	color: #444444;
@@ -87,15 +100,6 @@ body {
 .menuBack {
     background-image: radial-gradient( circle 939px at 94.7% 50%,  rgba(0,178,169,1) 0%, rgba(0,106,101,1) 76.9% );
 }
-
-/* .menuScroll {
-    background: rgba(255, 255, 255, 0.35);
-    border-radius: 16px;
-    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-    backdrop-filter: blur(6.1px);
-    -webkit-backdrop-filter: blur(6.1px);
-    border: 1px solid rgba(255, 255, 255, 0.22);
-} */
 
 .logoDin {
 	width: 40px;
@@ -106,14 +110,56 @@ body {
 }
 
 @media screen and (max-width: 885px){
-	#menu {position:relative}
-	#menu ul {background:#111;position:absolute;top:100%;right:0;left:0;z-index:3;height:auto;display:none}
-	#menu ul.sub-menus {width:100%;position:static;}
-	#menu ul.sub-menus a {padding-left:30px;}
-	#menu li {display:block;float:none;width:auto;}
-	#menu input, #menu label {position:absolute;top:0;left:0;display:block}
-	#menu input {z-index:4}
-	#menu input:checked + label {color:white}
-	#menu input:checked + label:before {content:"\00d7"}
-	#menu input:checked ~ ul {display:block}
+	#menu {
+		position:relative
+	}
+
+	#menu ul {
+		background:#111;
+		position:absolute;
+		top:100%;
+		right:0;
+		left:0;
+		z-index:3;
+		height:auto;
+		display:none
+	}
+
+	#menu ul.sub-menus {
+		width:100%;
+		position:static;
+	}
+
+	#menu ul.sub-menus a {
+		padding-left:30px;
+	}
+
+	#menu li {
+		display:block;
+		float:none;
+		width:auto;
+	}
+
+	#menu input, #menu label {
+		position:absolute;
+		top:0;
+		left:0;
+		display:block;
+	}
+
+	#menu input {
+		z-index:4;
+	}
+
+	#menu input:checked + label {
+		color:white;
+	}
+
+	#menu input:checked + label:before {
+		content:"\00d7";
+	}
+
+	#menu input:checked ~ ul {
+		display:block;
+	}
 }
