--- a/css/acceuil.css
+++ b/css/acceuil.css
@@ -5,28 +5,31 @@
     grid-row-gap: 20px;
     justify-items: stretch;
     align-items: stretch;
-    max-width: 100%;
+    /* max-width: 100%; */
     height: 80vh;
     border-radius: 10px;
     background: rgba(255, 255, 255, 0.2);
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
     backdrop-filter: blur(5px);
     -webkit-backdrop-filter: blur(5px);
-    margin: 50px 50px;
+    margin: 120px 50px 50px 50px;
  }
  .colContent {
     display: flex;
     flex-direction: column;
-    color: #fff;
+    color: rgb(68 72 126);
  }
 
- .vittel {
-    margin-top: 75px;
+ .btnShortcut {
+   display: flex;
+   justify-content: center;
+   flex-direction: row;
+   margin-top: 75px;
  }
           
          
  .btn-grad {
-    background-image: linear-gradient(to right, #ED4264 0%, #FFEDBC  51%, #ED4264  100%);
+    background-image: linear-gradient(to right, #d8a9f4 0%, #afe7f9 51%, #d8a9f4 100%);
     margin: 10px;
     padding: 15px 45px;
     text-align: center;
@@ -36,7 +39,7 @@
                
     box-shadow: 0 0 20px #eee;
     border-radius: 10px;
-    display: block;
+    /* display: block;é */
     border: none;
     width: 190px;
   }
@@ -48,11 +51,16 @@
   }
 
 .linkButton {
-    color: white; 
+    color: #4a4d73;
+    font-weight: 500; 
     text-decoration: none;
 }
-.linkButton:hover {
-    color: #fff;
+
+@media screen and (max-width: 685px) {
+   .btnShortcut {
+      display: flex;
+      justify-content: center;
+      flex-direction: column;
+      margin-top: 55px;
+    }
 }
- 
- 
