--- a/css/bts.css
+++ b/css/bts.css
@@ -1,5 +1,6 @@
 .griddy {
     width: 100%;
+    margin-top: 120px;
 }
 .parent {
     display: grid;
@@ -32,4 +33,10 @@
     display: flex;
     flex-direction: column;
     text-align: center;
+}
+
+.prettyLine {
+    border-top: 1px solid #8c8b8b;
+	border-bottom: 1px solid #fff;
+    width: 20%;
 }
