--- a/css/bts.css
+++ b/css/bts.css
@@ -1,32 +1,27 @@
 .griddy {
     width: 100%;
     margin-top: 120px;
+    padding: 0 20px;
 }
 .parent {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(5, 1fr);
-    grid-column-gap: 0px;
-    grid-row-gap: 0px;
-    padding: 30px;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    grid-column-gap: 50px;
+    grid-row-gap: 20pxpx;
     }
     
-.presentationTitre { 
-    grid-area: 1 / 2 / 2 / 4; 
-}
+.btsText { grid-area: 1 / 1 / 2 / 3; }
 
-.btsText { 
-    grid-area: 2 / 1 / 3 / 5; 
-}
+.optionSLAM { grid-area: 2 / 1 / 3 / 2; }
 
-.optionSLAM { 
-    grid-area: 3 / 1 / 6 / 3;
-    padding-right: 10px;
-}
+.optionSISR { grid-area: 2 / 2 / 3 / 3; }
 
-.optionSISR { 
-    grid-area: 3 / 3 / 6 / 5; 
-    padding-left: 10px;
+hr {
+    max-width: 20%;
+    border-top: 4px solid !important;
+    color: aquamarine !important;
+    display: block;
 }
 
 .textChild {
