--- a/css/bts.css
+++ b/css/bts.css
@@ -1,14 +1,15 @@
 .griddy {
     width: 100%;
-    margin-top: 120px;
+    margin-top: 90px;
     padding: 0 20px;
 }
+
 .parent {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(2, 1fr);
-    grid-column-gap: 50px;
-    grid-row-gap: 20px;
+    grid-column-gap: 25px;
+    grid-row-gap: 25px;
     }
     
 .btsText { 
@@ -23,14 +24,7 @@
 .optionSISR { 
     grid-area: 2 / 2 / 3 / 3;
     padding: 0 50px;
- }
-
-/* hr {
-    max-width: 20%;
-    border-top: 4px solid !important;
-    color: aquamarine !important;
-    display: block;
-} */
+}
 
 .textChild {
     display: flex;
@@ -38,6 +32,7 @@
     text-align: center;
     padding: 0 48vh;
 }
+
 .ajustementText {
     margin-bottom: 30px;
 }
@@ -46,4 +41,15 @@
     border-top: 1px solid #8c8b8b;
 	border-bottom: 1px solid #fff;
     width: 20%;
+}
+
+.veilleGlass {
+    background: rgba(255, 255, 255, 0.21);
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(8.5px);
+    -webkit-backdrop-filter: blur(8.5px);
+    border: 1px solid rgba(255, 255, 255, 0.15);
+    max-width: 100%;
+    padding: 20px;
 }
