--- a/css/profil.css
+++ b/css/profil.css
@@ -83,6 +83,20 @@
     margin: 0 40px 0 0;
 }
 
+.veilleGlass {
+    background: rgba(255, 255, 255, 0.21);
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(8.5px);
+    -webkit-backdrop-filter: blur(8.5px);
+    border: 1px solid rgba(255, 255, 255, 0.15);
+    max-width: 100%;
+    padding: 20px;
+}
+
+.adjust {
+    margin: 30px 30px;
+}
 
 /* .progress .progress-value{
     position: absolute;
