--- a/css/projet.css
+++ b/css/projet.css
@@ -15,22 +15,37 @@
     padding-inline: 50px 50px;
  }
 
-.teamUn {
-    height: 500px;
-    background: rgba(255, 255, 255, 0.37);
-    border-radius: 16px;
-    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-    backdrop-filter: blur(7.5px);
-    -webkit-backdrop-filter: blur(7.5px);
-    border: 1px solid rgba(255, 255, 255, 0.2);
+.parent {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: 1fr;
+    grid-column-gap: 30px;
+    grid-row-gap: 0px;
 }
 
-.teamDeux {
-    height: 500px;
-    background: rgba(255, 255, 255, 0.37);
+.div1 { grid-area: 1 / 1 / 2 / 2; }
+.div2 { grid-area: 1 / 2 / 2 / 3; }
+
+.adjust {
+    margin-top: 30px;
+}
+
+.veilleGlass {
+    background: rgba(255, 255, 255, 0.21);
     border-radius: 16px;
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-    backdrop-filter: blur(7.5px);
-    -webkit-backdrop-filter: blur(7.5px);
-    border: 1px solid rgba(255, 255, 255, 0.2);
+    backdrop-filter: blur(8.5px);
+    -webkit-backdrop-filter: blur(8.5px);
+    border: 1px solid rgba(255, 255, 255, 0.15);
+    max-width: 100%;
+    padding: 20px;
+}
+
+.colomn {
+    flex-direction: column;
+}
+
+.gitLogo {
+    margin: 50px 20px;
+    width: 90px;
 }
