--- a/css/profil.css
+++ b/css/profil.css
@@ -125,6 +125,12 @@
     0% { width: 0%; }
 }
 
+.pdfClass {
+    width: 100%;
+    height: 100vh;
+    padding: 20px 40px;
+}
+
 /* .nameClass {
     padding: 0 0 20px 20px;
     margin-top: -2px;
