--- a/css/bts.css
+++ b/css/bts.css
@@ -1,6 +1,6 @@
 .griddy {
     width: 100%;
-    margin-top: 90px;
+    margin-top: 40px;
     padding: 0 20px;
 }
 
@@ -30,7 +30,7 @@
     display: flex;
     flex-direction: column;
     text-align: center;
-    padding: 0 48vh;
+    /* padding: 0 48vh; */
 }
 
 .ajustementText {
