--- a/css/bts.css
+++ b/css/bts.css
@@ -1,6 +1,6 @@
 .griddy {
     width: 100%;
-    margin-top: 40px;
+    margin-top: 90px;
     padding: 0 20px;
 }
 
@@ -30,7 +30,7 @@
     display: flex;
     flex-direction: column;
     text-align: center;
-    padding: 0 48vh;
+    /* padding: 0 48vh; */
 }
 
 .ajustementText {
@@ -60,5 +60,9 @@
         flex-direction: column;
         text-align: center;
         padding: 0;
+    }
+
+    .griddy {
+        margin-top: 20px;
     }
 }
