--- a/css/bts.css
+++ b/css/bts.css
@@ -54,7 +54,7 @@
     padding: 20px;
 }
 
-@media screen and (max-width: 685px) {
+@media screen and (max-width: 885px) {
     .textChild {
         display: flex;
         flex-direction: column;
@@ -64,5 +64,29 @@
 
     .griddy {
         margin-top: 20px;
+    }
+}
+
+@media screen and (max-width: 719px) {
+    .parent {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: repeat(2, 1fr);
+        grid-column-gap: 25px;
+        grid-row-gap: 25px;
+    }
+
+    .btsText { 
+        grid-area: 1 / 1 / 2 / 2;
+    }    
+
+    .optionSLAM { 
+        grid-area: 2 / 1 / 3 / 2;
+        padding: 0 20px;
+    }
+    
+    .optionSISR { 
+        grid-area: 3 / 1 / 4 / 2;
+        padding: 0 20px;
     }
 }
