--- a/css/common.css
+++ b/css/common.css
@@ -5,7 +5,8 @@ body {
 
 /* Footer */
 .prettyFooter {
-	background-color: rgb(134, 134, 190);
+	/* background-color: rgb(134, 134, 190); */
+	background-color: #978bc5;
 	padding: 14px 14px;
 	color: #2d324e;
 	font-size: 16px;
@@ -112,7 +113,7 @@ body {
 }
 
 .menuBack {
-	background-color: rgb(134, 134, 190);
+	background-color: #978bc5;
 }
 
 /* logo linkedin */
@@ -138,7 +139,8 @@ h1, h2, h3, p, a {
 	}
 
 	#menu ul {
-		background:#8686be;
+		/* background:#8686be; */
+		background-color: #978bc5;
 		position:absolute;
 		top:100%;
 		right:0;
