--- a/css/acceuil.css
+++ b/css/acceuil.css
@@ -13,6 +13,7 @@
     backdrop-filter: blur(5px);
     -webkit-backdrop-filter: blur(5px);
     margin: 120px 50px 50px 50px;
+    background-color: #fff;
  }
  .colContent {
     display: flex;
