couleur correction bouton

--- a/css/acceuil.css
+++ b/css/acceuil.css
@@ -32,7 +32,7 @@
           
          
  .btn-grad {
-    background-image: linear-gradient(to right, #edbede 0%, #93ebd2 51%, #edbede 100%);
+    background-image: linear-gradient(to right, #f2b0c9 0%, #93ebd2 51%, #f2b0c9 100%);
     margin: 10px;
     padding: 15px 45px;
     text-align: center;
