correction couleur / supp code commenté

--- a/css/common.css
+++ b/css/common.css
@@ -5,8 +5,6 @@ body {
 
 /* Footer */
 .prettyFooter {
-	/* background-color: rgb(134, 134, 190); */
-	/* background-color: #978bc5; */
 	background-color: #8bc5b5;
 	padding: 14px 14px;
 	color: #2d324e;
@@ -114,7 +112,6 @@ body {
 }
 
 .menuBack {
-	/* background-color: #978bc5; */
 	background-color: #8bc5b5;
 }
 
@@ -141,8 +138,7 @@ h1, h2, h3, p, a {
 	}
 
 	#menu ul {
-		/* background:#8686be; */
-		background-color: #978bc5;
+		background-color: #8bc5b5;
 		position:absolute;
 		top:100%;
 		right:0;
